--- a/resources/js/static/scss/admin.scss
+++ b/resources/js/static/scss/admin.scss
@@ -1,6 +1,3 @@
-body {
-    background-color: red;
-}
 .race-table {
     display: flex;
     flex-direction: column;
@@ -43,14 +40,6 @@ body {
 }
 .race-table__column {
     border-right: 1px solid #ccc;
-}
-.result-table {
-    border-collapse: collapse;
-    th, td {
-        border: 1px solid #ccc;
-        padding: 10px;
-        text-align: center;
-    }
 }
 .search-container {
     width: 300px;
@@ -216,13 +205,27 @@ body {
         }
     }
 }
-
 .tableWrapper {
     padding: 1rem 0;
     overflow-x: auto;
 }
-
 .resize-cursor {
     cursor: ew-resize;
     cursor: col-resize;
+}
+.tiptap {
+    strong {
+        font-weight: 500;
+    }
+    em {
+        font-style: italic;
+    }
+    ul {
+        list-style-type: disc;
+        padding-left: 15px;
+    }
+    ol {
+        list-style-type: decimal;
+        padding-left: 15px;
+    }
 }
