--- a/resources/js/static/scss/admin.scss
+++ b/resources/js/static/scss/admin.scss
@@ -229,3 +229,30 @@
         padding-left: 15px;
     }
 }
+.stage-item {
+    display: flex;
+    background-color: #FDFDFD;
+    padding: 15px;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    box-shadow: 0px 0px 40px 5px rgba(0, 0, 0, .1);
+    flex-direction: column;
+    color: #242424;
+    .btn-full-width {
+        height: 40px;
+        font-size: .95em;
+    }
+}
+.stage-title {
+    font-size: 1.25em;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.stage-yacht, .stage-time {
+    font-size: .95em;
+    color: #555;
+    margin-bottom: 10px;
+}
+.stage-time {
+    color: #242424;
+}
