--- a/resources/scss/app-media.scss
+++ b/resources/scss/app-media.scss
@@ -6,6 +6,22 @@
 @media screen and (max-width: 1500px){
 
 }
+@media screen and (max-width: 1299.98px) {
+    .user {
+        justify-content: center;
+    }
+    .user-icon {
+        margin-bottom: 15px;
+        margin-right: 0;
+    }
+    .user__container {
+        flex-direction: column;
+    }
+    .user-settings {
+        position: absolute;
+        right: 10px;
+    }
+}
 @media screen and (max-width: 1199.98px){
 
 }
