--- a/resources/scss/app-media.scss
+++ b/resources/scss/app-media.scss
@@ -4,7 +4,9 @@
     }
 }
 @media screen and (max-width: 1500px){
-
+    .dash-stage__container {
+        grid-template-columns: 1fr;
+    }
 }
 @media screen and (max-width: 1299.98px) {
     .user {
