--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -376,7 +376,7 @@ h1 {
     h3 {
         font-size: 1.4em;
         font-weight: 500;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
     p {
         font-size: 1.1em;
@@ -655,6 +655,10 @@ h1 {
     font-weight: 500;
     font-size: 1.5em;
     color: #242424;
+    transition: .3s;
+    &:hover {
+        text-decoration: underline;
+    }
 }
 .user-stage__tournament {
     color: #555;
@@ -674,8 +678,12 @@ h1 {
     margin-bottom: 15px;
 }
 .user-stage__date {
-    line-height: 130%;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
+    display: flex;
+    flex-direction: column;
+    span {
+        margin-bottom: 5px;
+    }
 }
 .user-stage__info {
     width: 280px;
@@ -685,8 +693,50 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 15px;
     font-weight: 500;
+    font-size: 1.05em;
+}
+.dash-stage__container {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: 1fr 1fr;
+}
+.dash-stage__header {
+    display: flex;
+    align-items: center;
+    position: relative;
+    margin-bottom: 30px;
+    .user-stage__participant {
+        position: absolute;
+        right: 0px;
+    }
+}
+.dash-stage__tournament {
+    font-size: .9em;
+}
+.dash-stage__title {
+    font-weight: 500;
+    font-size: 1.2em;
+    color: #242424;
+    &:hover {
+        text-decoration: underline;
+    }
+}
+.dash-stage__date {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 25px;
+}
+.dash-stage {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    box-shadow: 0px 0px 40px 5px rgba(0, 0, 0, .1);
+    border-radius: 10px;
+    .btn {
+        width: 100%;
+        height: 45px;
+    }
 }
 
 
@@ -806,4 +856,7 @@ body .vue3-progress-bar-container .vue3-progress-bar {
     p {
         text-align: justify;
     }
+}
+.mb0 {
+    margin-bottom: 0;
 }
